force-app/main/default/objects/Resource_Working_Hour__c/Resource_Working_Hour__c.object-meta.xml
<CustomObject>
    <label>Resource Working Hour</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Resource Working Hour ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>