force-app/main/default/objects/Resource_Working_Hour__c/fields/Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Center_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Center Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resource Working Hours</relationshipLabel>
    <relationshipName>Resource_Working_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>