force-app/main/default/objects/Resource_Working_Hour__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Name</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resource Working Hours</relationshipLabel>
    <relationshipName>Resource_Working_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>